--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@
     justify-content: space-between;
 }
 
+ul {
+    list-style: none;
+}
+
+.categories {
+    display: flex;
+    flex-direction: row;
+    gap:20px; 
+}
+
 a {
     text-decoration: none;
     color: white;
