--- a/style.css
+++ b/style.css
@@ -5,14 +5,21 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    margin-top: 7vh;
+    /* il body inizia sotto la barra arancione */
+}
+
 .container {
     max-width: 70%;
     min-width: 30%;
     margin: 0 auto;
 }
 
+/* HEADER  */
+
 .orange-bar {
-    width: 100vw;
+    width: 100%;
     height: 4vh;
     background-color: rgb(255, 104, 8);
     position: fixed;
@@ -26,7 +33,7 @@
     justify-content: space-between;
 }
 
-ul {
+.nav-bar ul {
     list-style: none;
 }
 
@@ -47,12 +54,17 @@ header img {
     width: 100px;
 }
 
+nav li:hover {
+    background-color: bisque;
+    color:aqua;
+}
+
 .ico {
     width: 16px;
     color: white;
     display: flex;
     flex-direction: row;
-    gap: 0.5em;
+    padding: 0 1em;
 }
 
 /* MAIN E SCHEDE */
@@ -60,26 +72,28 @@ header img {
 .cards-container {
     max-width: 70%;
     min-width: 30%;
-    margin: 100px auto;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
 
-/* .cards {
-} */
-
-.img-inside {
-    position:relative;
-
+.card {
+    width: 33%;
 }
 
 main img {
-    width: 30%;
+    max-width: 100%;
+    min-width: 30%;
+    z-index: 1;
 }
 
-.prefe {
+.card .img-area {
+    position:relative;
+}
+
+.heart {
     position: absolute;
     top: 5px;
     right: 0;
@@ -87,9 +101,28 @@ main img {
     padding: 0.8rem;
 }
 
+.heart:hover {
+    color: red;
+}
 
 .discount {
     position: absolute;
+    color: white;
+    background-color: red;
+    bottom: 100px;
+    left: 0;
+    padding: 0.5rem;
+    font-weight: 500;
+}
+
+.green-tag {
+    position: absolute;
+    color: white;
+    background-color: green;
+    padding: 0.5rem;
+    font-weight: 500;
+    bottom: 100px;
+    left: 60px;
 }
 
 .price-red {
@@ -100,6 +133,12 @@ main img {
 .price-line-through {
     text-decoration: line-through;
     font-weight: 500;
+}
+
+/* COMPORTAMENTO HOVER */
+
+.item-hover {
+    display: none;
 }
 
 /* FOOTER */
