--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     max-width: 70%;
     min-width: 30%;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 /* HEADER  */
@@ -23,6 +25,7 @@ body {
     height: 4vh;
     background-color: rgb(255, 104, 8);
     position: fixed;
+    z-index: 999;
     top: 0;
 }
 
@@ -31,7 +34,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 999;
 }
 
 .nav-bar ul {
@@ -182,6 +184,7 @@ nav li:hover {
 footer {
     position: fixed;
     bottom: 0;
+    z-index: 99999;
 }
 
 .footer-container h4 {
